--- a/app/bower.json
+++ b/app/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "angular": "~1.3.8",
     "html5-boilerplate": "~4.3.0",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "jquery": "~2.1.3",
+    "moment": "~2.8.4"
   }
 }
