--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "talviolympicks ==============",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "cd app && bower install",
+    "start": "node client/server.js"
   },
   "repository": {
     "type": "git",
