--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/miro/talviolympicks",
   "dependencies": {
-    "express": "~3.3.5"
+    "express": "~3.3.5",
+    "bower": "~1.3.12"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
