Fix path to the node server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "postinstall": "cd app && bower install",
-    "start": "node client/server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
