--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/miro/talviolympicks",
   "dependencies": {
     "express": "~3.3.5",
-    "bower": "~1.3.12"
+    "request": "~2.51.0",
+    "bluebird": "~2.4.2",
+    "bower": "~1.3.12",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
